--- a/app/home/HomeAppCmds.html
+++ b/app/home/HomeAppCmds.html
@@ -43,7 +43,7 @@
 <!-- Page content -->
 <div id="content-header">
     <div class="padding">
-        <h1>Welcome OfficeJS11Test</h1>
+        <h1>Enable / Disable Demo</h1>
     </div>
 </div>
 <div id="content-main">
@@ -70,96 +70,6 @@
         <input id="commandButtonID" type="text" value="Tab1Button1;Tab1Menu1Item1" />
         <button id="enableCmdBtn">Enable Controls</button>
         <button id="disableCmdBtn">Disable Controls</button>
-        <br />
-        <br />
-        <span>Ribbon Definition: </span>
-        <input id="ribbonDefinitionId" type="text" value="Enter JSON ribbon definition here." />
-
-        <button id="generateRibbonBtn">Generate using definition</button>
-        <button id="generateRandomRibbonDefinitionBtn">Generate random tabs</button>
-        <br />
-        <br />
-        <span>Contextual Tab Ids: </span>
-        <input id="ribbonTabId" type="text" value="CtxTab1;CtxTab2" />
-        <button id="showRibbonTabBtn">Show Contextual Tab</button>
-        <button id="hideRibbonTabBtn">Hide Contextual Tab</button>
-        <br />
-        <br />
-        <button id="writeDataBtn">Write Data </button>
-        <button id="writeDataBindingBtn">Write Data With Binding </button>
-        <button id="readDataBtn">Read Selected Data </button>
-        <br />
-        <span>Binding Name: </span>
-        <input id="bindingName" type="text" value="Mybinding" />
-        <br />
-        <button id="bindDataBtn">Bind Selected Data </button>
-        <button id="getbindsBtn">Get all Bindings</button>
-        <button id="setBoundDataBtn">Set Bound Data </button>
-        <button id="readBoundDataBtn">Read Bound Data </button>
-        <button id="releaseBindingBtn">Release Bound </button>
-        <button id="setsettingBtn">Set Setting </button>
-        <button id="getsettingBtn">Get Setting </button>
-        <br />
-        <input id="settingName" type="text" value="backgroundColor" /> <input id="settingvalue" type="text"
-                                                                              value="1" /><button id="setSettingDataBtn">Set and Save Settings </button>
-        <br />
-        <button id="saveAutoShowTaskpaneBtn">Set AutoShowTaskpaneWithDocument</button> <input id="showtaskpane"
-                                                                                              type="checkbox" Checked />
-        <br />
-        <input id="getsettingName" type="text" value="backgroundColor" />
-        <button id="getSettingDataBtn">Add SettingsChanged Event </button>
-        <button id="RemoveSettingDataBtn">Remove SettingsChanged Event </button>
-        <br />
-        <button id="addSelectionChangedEvent">Add Selection Changed Event</button>
-        <button id="removeSelectionChangedEvent">Remove Selection Changed Event</button>
-        <button id="addBDataChgEventBtn">Add BindingDataChanged Event </button>
-        <button id="removeBDataChgEventBtn">Remove BindingDataChangedEvent </button>
-        <button id="addBSltChgEventBtn">Add BindingSelectionChanged Event </button>
-        <button id="removeBSltChgEventBtn">Remove BindingSelectionChanged Event </button>
-        <button id="addDocSltChgEventBtn">Add DocumentSelectionChanged Event </button>
-        <button id="removeDocSltChgEventBtn">Remove DocumentSelectionChanged Event </button>
-        <br />
-        <button id="runPerfBtn"> Run Perf </button>
-        <br />
-        <br />
-        <button id="getQueryStringBtn"> Get URL Query String </button>
-        <br />
-        <button id="goToNextSlideBtn">Next Slide</button>
-        <br />
-        <br />
-        <span>Results: </span>
-        <div id="results"></div>
-
-        <br />
-        <a href='https://jackychen.azurewebsites.net/agaves/WacApiAgaveWeb/App/Home/ShowDialogApiParentPage.html'>Henry's
-            page</a>
-        <br />
-        <a href='HomeAppCmds_gary.html'>gary's page</a>
-        <br />
-        <a href='HomeAppCmds_Sean.html'>Sean's page</a>
-        <br />
-        <a href='HomeAppCmds_Sylvain.html'>Sylvain's page</a>
-        <br />
-        <a href='HomeAppCmds_One.html'>Page One</a>
-        <br />
-        <a href='HomeAppCmds_Two.html'>Page Two</a>
-        <br />
-        <a href='HomeAppCmds_Three.html'>Page Three</a>
-        <br />
-        <a href='HomeAppCmds_Four.html'>Page Four</a>
-        <br />
-        <a href='HomeAppCmds_Five.html'>Page Five</a>
-        <br />
-        <a href='HomeAppCmds_Six.html'>Page Six</a>
-        <br />
-        <a href='HomeAppCmds_Seven.html'>Page Seven</a>
-        <br />
-        <a href='HomeAppCmds_Eight.html'>Page Eight</a>
-        <br />
-        <a href='HomeAppCmds_Nine.html'>Page Nine</a>
-        <br />
-        <a href='HomeAppCmds_Ten.html'>Page Ten</a>
-        <br />
     </div>
 </div>
 <script>
