--- a/app/home/HomeAppCmds.html
+++ b/app/home/HomeAppCmds.html
@@ -397,7 +397,7 @@
 			}
 		]
 	};
-	document.getElementById("ribbonDefinitionId").value = JSON.stringify(defaultribbondef);
+	// document.getElementById("ribbonDefinitionId").value = JSON.stringify(defaultribbondef);
 </script>
 </body>
 
